Fix logo overflow in IE11

--- a/src/client/components/MenuLogo/MenuLogo.less
+++ b/src/client/components/MenuLogo/MenuLogo.less
@@ -5,6 +5,7 @@
   height: 100%;
   align-items: center;
   justify-content: center;
+  width: 180px;
 }
 
 .oc-menu-logo__image-container {
